--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/assets/styles.css" />
+    <link rel="manifest" href="/manifest.json" />
     <title>Vite + Vue</title>
   </head>
   <body>
